feat: Marcadores rojos se muestran cuando se brindan los datos ingresado de rubro y radio de busqueda en el mapa, mientras mas grande el radio de busqueda mas lugares se mostraran

--- a/public/inicio.html
+++ b/public/inicio.html
@@ -141,9 +141,10 @@
             <option value="pharmacy">Farmacia</option>
           </select>
         </label>
-        <button type="submit">Buscar lugares</button>
-      </form>
-      <div id="mensajeLugar" style="margin-top:1em;color:#145a96;"></div>
+  <button type="submit">Buscar lugares</button>
+  <!-- Aquí va el mensaje -->
+  <div id="mensajeLugar" style="margin-top:1em;color:#145a96;"></div>
+</form>
     </div>
 
     <!-- Mapa a la derecha, ocupa todo -->
